Fix missing margin on bottom of found puzzle taus.

--- a/static/styles.css
+++ b/static/styles.css
@@ -284,7 +284,7 @@ table {
 #found_puzzle_taus {
   margin-left:20px;
   padding:5px 2px 5px 5px;
-  height:392px;
+  height:396px;
   width:135px;
   border:1px solid #CCC;
   -webkit-border-radius:5px;
